tests/ui/typeck/external_type_clashes.stderr
error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function f(S1 memory a) external {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     function f(S2 memory a) external {}
   |     ----------------------------------- other declaration is here

error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function f(a) public {}
   |     ----------------------- other declaration is here
...
LL |     function f(uint8 a) public {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function c(address) public pure {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     function c(address payable) public pure {}
   |     ------------------------------------------ other declaration is here

error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function f(address) external pure {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     function f(address payable) external pure {}
   |     -------------------------------------------- other declaration is here

error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function f(MyAddress a) external {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     function f(address a) external {}
   |     --------------------------------- other declaration is here

error[9914]: function overload clash during conversion to external types for arguments
  --> ROOT/tests/ui/typeck/external_type_clashes.sol:LL:CC
   |
LL |     function g(MyAddress a) external {}
   |     ----------------------------------- other declaration is here
...
LL |     function g(I a) external {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

